--- a/blog-how-to-make-marriage-card.html
+++ b/blog-how-to-make-marriage-card.html
@@ -830,6 +830,24 @@
         </a>
     </section>
 
+    <section 
+    <section class="author-bio" style="margin: 40px 0; padding: 30px; background: #f8f9ff; border-radius: 16px; border-left: 4px solid #4361ee;">
+        <div style="display: flex; gap: 20px; align-items: center; flex-wrap: wrap;">
+            <div style="flex-shrink: 0;">
+                <img src="https://easyjpgtopdf.com/images/logo.png" alt="easyjpgtopdf Team" style="width: 80px; height: 80px; border-radius: 50%; object-fit: cover; border: 3px solid #4361ee;">
+            </div>
+            <div style="flex: 1;">
+                <h3 style="font-size: 1.5rem; color: #0b1630; margin-bottom: 10px;">
+                    <i class="fas fa-user-circle" style="color: #4361ee; margin-right: 8px;"></i>
+                    About the Author
+                </h3>
+                <p style="font-size: 1.1rem; color: #56607a; line-height: 1.8; margin: 0;">
+                    <strong>easyjpgtopdf Team</strong> - Our expert team of developers and content creators is dedicated to providing you with the best online tools and comprehensive guides for document and image processing.
+                </p>
+            </div>
+        </div>
+    </section>
+
     <section class="faq-section" style="margin: 30px 0;">
                         <div class="faq-item" style="background: #f8f9ff; padding: 20px; border-radius: 12px; margin-bottom: 15px; border-left: 4px solid #4361ee;">
                             <h3 style="color: #0b1630; margin: 0 0 10px 0; font-size: 1.1rem;">Q: What file formats are supported?</h3>
@@ -911,6 +929,24 @@
         <a href="index.html" style="display: inline-block; background: white; color: #4361ee; padding: 15px 30px; border-radius: 8px; text-decoration: none; font-weight: 600; font-size: 1.1rem; transition: transform 0.3s;" onmouseover="this.style.transform='translateY(-2px)'" onmouseout="this.style.transform='translateY(0)'">
             <i class="fas fa-rocket" style="margin-right: 8px;"></i>Explore All Tools
         </a>
+    </section>
+
+    <section 
+    <section class="author-bio" style="margin: 40px 0; padding: 30px; background: #f8f9ff; border-radius: 16px; border-left: 4px solid #4361ee;">
+        <div style="display: flex; gap: 20px; align-items: center; flex-wrap: wrap;">
+            <div style="flex-shrink: 0;">
+                <img src="https://easyjpgtopdf.com/images/logo.png" alt="easyjpgtopdf Team" style="width: 80px; height: 80px; border-radius: 50%; object-fit: cover; border: 3px solid #4361ee;">
+            </div>
+            <div style="flex: 1;">
+                <h3 style="font-size: 1.5rem; color: #0b1630; margin-bottom: 10px;">
+                    <i class="fas fa-user-circle" style="color: #4361ee; margin-right: 8px;"></i>
+                    About the Author
+                </h3>
+                <p style="font-size: 1.1rem; color: #56607a; line-height: 1.8; margin: 0;">
+                    <strong>easyjpgtopdf Team</strong> - Our expert team of developers and content creators is dedicated to providing you with the best online tools and comprehensive guides for document and image processing.
+                </p>
+            </div>
+        </div>
     </section>
 
     <section class="faq-section" style="margin-top: 50px; padding: 40px; background: white; border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
