--- a/index.html
+++ b/index.html
@@ -44,230 +44,8 @@
             padding: 0 20px;
         }
 
-        /* Header Styles */
-        header {
-            background-color: white;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            position: sticky;
-            top: 0;
-            z-index: 100;
-        }
-
-        .navbar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 0;
-            font-size: 0.9em;
-        }
-
-        .logo {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            font-size: 20px;
-            font-weight: 700;
-            color: var(--primary);
-            text-decoration: none;
-        }
-
-        .logo i {
-            color: var(--secondary);
-        }
-
-        .nav-links {
-            display: flex;
-            gap: 15px;
-            align-items: center;
-        }
-
-        .nav-links a {
-            text-decoration: none;
-            color: var(--dark);
-            font-weight: 500;
-            transition: color 0.3s;
-        }
-
-        .nav-links a:hover {
-            color: var(--primary);
-        }
-
-        .nav-links a.active {
-            color: var(--primary);
-            font-weight: 600;
-        }
-
-        .dropdown {
-            position: relative;
-        }
-
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: white;
-            min-width: 180px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            z-index: 1;
-            border-radius: 6px;
-            padding: 6px 0;
-            top: 100%;
-            left: 0;
-            font-size: 0.9em;
-        }
-
-        .dropdown:hover .dropdown-content {
-            display: block;
-        }
-
-        .dropdown-content a {
-            display: block;
-            padding: 8px 16px;
-            text-decoration: none;
-            color: var(--dark);
-            font-size: 0.95em;
-        }
-
-        .dropdown-content a:hover {
-            background-color: var(--light);
-        }
-
-        .auth-buttons {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            font-size: 0.9em;
-        }
-
-        .auth-link {
-            display: inline-flex;
-            align-items: center;
-            padding: 8px 14px;
-            border-radius: 999px;
-            border: 1px solid rgba(67, 97, 238, 0.28);
-            color: var(--primary);
-            font-weight: 600;
-            text-decoration: none;
-            font-size: 0.9em;
-            transition: background 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
-        }
-
-        .auth-link:hover {
-            background: rgba(67, 97, 238, 0.1);
-            color: var(--secondary);
-            box-shadow: 0 8px 18px rgba(67, 97, 238, 0.15);
-        }
-
-        .user-menu {
-            display: none;
-            align-items: center;
-            position: relative;
-        }
-
-        .user-menu-toggle {
-            display: inline-flex;
-            align-items: center;
-            gap: 10px;
-            padding: 10px 16px;
-            border-radius: 999px;
-            border: 1px solid rgba(67, 97, 238, 0.22);
-            background: white;
-            color: var(--dark);
-            font-weight: 600;
-            cursor: pointer;
-            transition: box-shadow 0.2s ease, border-color 0.2s ease, transform 0.2s ease;
-        }
-
-        .user-menu-toggle:hover,
-        .user-menu[data-open="true"] .user-menu-toggle {
-            border-color: rgba(67, 97, 238, 0.42);
-            box-shadow: 0 10px 24px rgba(67, 97, 238, 0.18);
-        }
-
-        .user-menu-toggle i {
-            transition: transform 0.2s ease;
-        }
-
-        .user-menu[data-open="true"] .user-menu-toggle i {
-            transform: rotate(180deg);
-        }
-
-        .user-initial {
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            width: 32px;
-            height: 32px;
-            border-radius: 50%;
-            background: linear-gradient(135deg, var(--primary), var(--secondary));
-            color: white;
-            font-weight: 700;
-            font-size: 0.95rem;
-        }
-
-        .user-dropdown {
-            position: absolute;
-            top: calc(100% + 12px);
-            right: 0;
-            min-width: 240px;
-            background: #ffffff;
-            border-radius: 16px;
-            box-shadow: 0 18px 42px rgba(15, 23, 42, 0.18);
-            border: 1px solid rgba(67, 97, 238, 0.08);
-            padding: 12px 0;
-            display: flex;
-            flex-direction: column;
-            gap: 4px;
-            z-index: 1000;
-        }
-
-        /* Hide dropdown when hidden attribute is present */
-        .user-dropdown[hidden] {
-            display: none !important;
-        }
-
-        .user-dropdown a,
-        .user-dropdown button {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            padding: 10px 18px;
-            background: transparent;
-            border: none;
-            width: 100%;
-            text-align: left;
-            color: var(--dark);
-            font-weight: 500;
-            font-size: 0.95rem;
-            text-decoration: none;
-            cursor: pointer;
-            transition: background 0.2s ease, color 0.2s ease, padding-left 0.2s ease;
-        }
-
-        .user-dropdown a:hover,
-        .user-dropdown button:hover {
-            background: rgba(67, 97, 238, 0.08);
-            color: var(--primary);
-            padding-left: 22px;
-        }
-
-        .dropdown-logout {
-            color: #c92a2a;
-        }
-
-        .dropdown-logout:hover {
-            background: rgba(201, 42, 42, 0.12);
-            color: #c92a2a;
-        }
-
-        @media (max-width: 768px) {
-            .auth-buttons {
-                display: none;
-            }
-
-            .user-menu {
-                margin-left: auto;
-            }
-        }
+        /* Header Styles - All header styles moved to css/header.css */
+        /* Removed duplicate inline styles to prevent conflicts */
 
         .sr-only {
             position: absolute;
