Fix: Remove remaining duplicate auth button styles from index.html
- Removed duplicate .auth-buttons and .auth-btn inline styles
- All header-related styles now exclusively in css/header.css
- Ensures consistent styling across local, GitHub, and Vercel

--- a/index.html
+++ b/index.html
@@ -119,40 +119,7 @@
             color: var(--success);
         }
 
-        .auth-buttons {
-            display: flex;
-            gap: 12px;
-            align-items: center;
-        }
-
-        .auth-btn {
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            gap: 8px;
-            padding: 8px 20px;
-            border-radius: 999px;
-            text-decoration: none;
-            font-weight: 600;
-            font-size: 0.95rem;
-            color: #fff;
-            background: linear-gradient(135deg, #ff5a5f, #ff8a5c);
-            border: 1px solid rgba(255, 90, 95, 0.4);
-            box-shadow: 0 8px 18px rgba(255, 90, 95, 0.25);
-            transition: transform 0.2s ease, box-shadow 0.2s ease;
-        }
-
-        .auth-btn::before {
-            content: '\f007';
-            font-family: 'Font Awesome 6 Free';
-            font-weight: 900;
-            font-size: 0.85rem;
-        }
-
-        .auth-btn:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 12px 22px rgba(255, 90, 95, 0.35);
-        }
+        /* Auth buttons styles moved to css/header.css */
 
         /* Hero Section */
         .hero {
