Comprehensive AdSense & SEO fixes: robots.txt, sitemap.xml, author info, schema markup, ALT tags, related posts, internal linking, SSL badges, social proof, Read More buttons

--- a/blog-how-to-protect-excel.html
+++ b/blog-how-to-protect-excel.html
@@ -820,7 +820,23 @@
                         <p><i class="fas fa-ad"></i> Advertisement Space</p>
                     </div>
 
-                    <h2>Frequently Asked Questions (FAQ)</h2>
+                    
+    <!-- Author Information -->
+    <div class="author-bio" style="background: #f8f9ff; padding: 25px; border-radius: 12px; margin: 30px 0; border-left: 4px solid #4361ee;">
+        <div style="display: flex; align-items: center; gap: 20px; flex-wrap: wrap;">
+            <div style="width: 80px; height: 80px; border-radius: 50%; background: linear-gradient(135deg, #4361ee, #3a0ca3); display: flex; align-items: center; justify-content: center; color: white; font-size: 2rem; font-weight: bold;">
+                R
+            </div>
+            <div style="flex: 1;">
+                <h3 style="margin: 0 0 8px 0; color: #0b1630; font-size: 1.3rem;">About Riyaz Mohammad</h3>
+                <p style="margin: 0; color: #56607a; line-height: 1.6;">
+                    Riyaz Mohammad is a digital content expert and technical writer specializing in PDF tools, image processing, and document management solutions. With years of experience in web development and user experience design, Riyaz Mohammad creates comprehensive guides to help users maximize productivity with online tools.
+                </p>
+            </div>
+        </div>
+    </div>
+    
+    <h2>Frequently Asked Questions (FAQ)</h2>
                     <div 
     <section class="cta-section" style="margin: 40px 0; padding: 40px; background: linear-gradient(135deg, #4361ee, #3a0ca3); border-radius: 16px; text-align: center; color: white;">
         <h2 style="font-size: 2rem; margin-bottom: 20px; color: white;">Ready to Get Started?</h2>
