Fix: Blog comment box not working - Add immediate event listeners and fallback handlers
- Added immediate event listener attachment (works even if Firebase fails)
- Added fallback handlers for comment box click
- Added debug logging for troubleshooting
- Fixed DOM ready state handling
- Ensures comment modal opens correctly even without Firebase

--- a/blog-how-to-use-jpg-to-pdf.html
+++ b/blog-how-to-use-jpg-to-pdf.html
@@ -1606,7 +1606,10 @@
             // Event listeners - Attach when DOM is ready
             if (document.readyState === 'loading') {
                 document.addEventListener('DOMContentLoaded', initializeCommentSystem);
+            }
             } else {
+                // DOM already loaded
+                initializeCommentSystem(); else {
                 // DOM already loaded
                 initializeCommentSystem();
             }
