Remove testimonials section from all pages, fix schema to BlogPosting, add SSL badges, update DMCA links, add meta tags - AdSense compliance improvements

--- a/blog-articles.html
+++ b/blog-articles.html
@@ -1073,7 +1073,7 @@
                 <a href="pricing.html">Pricing</a>
                 <a href="privacy-policy.html">Privacy Policy</a>
                 <a href="terms-of-service.html">Terms of Service</a>
-                <a href="dmca-en.html">DMCA</a>
+                <a href="dmca.html">DMCA</a>
                 <a href="blog.html">Blog</a>
             </div>
             <p class="footer-brand-line">&copy; easyjpgtopdf &mdash; Free PDF &amp; Image Tools for everyone. All rights reserved.</p>
