--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>easyjpgtopdf - All PDF Tools You Need</title>
+    <meta name="description" content="Free online PDF tools - Convert JPG to PDF, Word to PDF, Excel to PDF, merge, split, compress, edit, protect PDFs. Professional document processing tools for all your needs.">
+    <meta name="keywords" content="pdf converter, jpg to pdf, word to pdf, excel to pdf, merge pdf, split pdf, compress pdf, edit pdf, pdf tools, online pdf converter">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -349,41 +351,6 @@
             font-size: 1.3rem;
         }
 
-        /* Testimonials */
-        .testimonials {
-            padding: 24px 0;
-            text-align: center;
-        }
-
-        .testimonials .section-title {
-            margin-bottom: 12px;
-        }
-
-        .testimonial-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 24px;
-            margin-top: 12px;
-        }
-
-        .testimonial-card {
-            background-color: white;
-            padding: 30px;
-            border-radius: 12px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
-        }
-
-        .testimonial-text {
-            font-style: italic;
-            margin-bottom: 20px;
-            color: var(--gray);
-        }
-
-        .testimonial-author {
-            display: flex;
-            align-items: center;
-            gap: 15px;
-        }
 
         .author-avatar {
             width: 50px;
@@ -2086,48 +2053,6 @@
                     });
                 </script>
             </section>
-
-            <div class="testimonials">
-                <h2 class="section-title">What Our Users Say</h2>
-                <div class="testimonial-grid">
-                    <div class="testimonial-card">
-                        <div class="testimonial-text">
-                            "easyjpgtopdf has saved me so much time! The merge tool is incredibly easy to use and works perfectly every time."
-                        </div>
-                        <div class="testimonial-author">
-                            <div class="author-avatar">AJ</div>
-                            <div class="author-info">
-                                <h4>Alex Johnson</h4>
-                                <p>Freelance Designer</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="testimonial-card">
-                        <div class="testimonial-text">
-                            "I use easyjpgtopdf daily for my work. The compression tool is a lifesaver when I need to email large PDF files."
-                        </div>
-                        <div class="testimonial-author">
-                            <div class="author-avatar">MR</div>
-                            <div class="author-info">
-                                <h4>Maria Rodriguez</h4>
-                                <p>Project Manager</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="testimonial-card">
-                        <div class="testimonial-text">
-                            "Converting PDFs to Word has never been easier. The formatting stays perfect every time. Highly recommended!"
-                        </div>
-                        <div class="testimonial-author">
-                            <div class="author-avatar">TW</div>
-                            <div class="author-info">
-                                <h4>Thomas Wilson</h4>
-                                <p>University Professor</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
             <div class="comments" id="feedback-section">
                 <h2 class="section-title">Reviews & Comments</h2>
@@ -4982,29 +4907,6 @@
         </div>
     </div>
 
-    <section class="testimonials-section" style="background: #f8f9ff; padding: 50px 0; margin: 40px 0;">
-        <div class="container" style="max-width: 1200px; margin: 0 auto; padding: 0 24px;">
-            <h2 style="text-align: center; font-size: 2rem; color: #0b1630; margin-bottom: 40px;">What Our Users Say</h2>
-            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 25px;">
-                <div style="background: white; padding: 25px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
-                    <div style="color: #f5a623; font-size: 1.2rem; margin-bottom: 10px;">★★★★★</div>
-                    <p style="color: #56607a; line-height: 1.6; margin-bottom: 15px;">"Best PDF tools I've ever used! Fast, reliable, and completely free. Highly recommended!"</p>
-                    <div style="font-weight: 600; color: #0b1630;">- Sarah Johnson</div>
-                </div>
-                <div style="background: white; padding: 25px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
-                    <div style="color: #f5a623; font-size: 1.2rem; margin-bottom: 10px;">★★★★★</div>
-                    <p style="color: #56607a; line-height: 1.6; margin-bottom: 15px;">"Easy to use interface and great results. Saved me hours of work!"</p>
-                    <div style="font-weight: 600; color: #0b1630;">- Michael Chen</div>
-                </div>
-                <div style="background: white; padding: 25px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
-                    <div style="color: #f5a623; font-size: 1.2rem; margin-bottom: 10px;">★★★★★</div>
-                    <p style="color: #56607a; line-height: 1.6; margin-bottom: 15px;">"Professional quality tools without any cost. Amazing service!"</p>
-                    <div style="font-weight: 600; color: #0b1630;">- Emily Rodriguez</div>
-                </div>
-            </div>
-        </div>
-    </section>
-    
     <footer>
         <div class="container footer-inner">
             <div class="footer-company-links">
@@ -5014,7 +4916,7 @@
                 <a href="pricing.html">Pricing</a>
                 <a href="privacy-policy.html">Privacy Policy</a>
                 <a href="terms-of-service.html">Terms of Service</a>
-                <a href="dmca-en.html">DMCA</a>
+                <a href="dmca.html">DMCA</a>
                 <a href="blog.html">Blog</a>
             </div>
             <p class="footer-brand-line">&copy; easyjpgtopdf &mdash; Free PDF &amp; Image Tools for everyone. All rights reserved.</p>
