Add FAQ questions to all blog pages, fix AdSense approval issues: remove pre-approval ads, add user feedback, fix schema, improve code quality, update attribution page

--- a/attributions.html
+++ b/attributions.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Attributions and Licenses | easyjpgtopdf</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Attributions & Third-Party Licenses - easyjpgtopdf</title>
+    <meta name="description" content="Attributions and license information for third-party libraries and code used in easyjpgtopdf.">
 <link href="css/footer.css" rel="stylesheet"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"></link>
 <style>
@@ -236,7 +236,7 @@
                 <a href="pricing.html">Pricing</a>
                 <a href="privacy-policy.html">Privacy Policy</a>
                 <a href="terms-of-service.html">Terms of Service</a>
-                <a href="dmca-en.html">DMCA</a>
+                <a href="dmca.html">DMCA</a>
                 <a href="blog.html">Blog</a>
             </div>
             <p class="footer-brand-line">&copy; easyjpgtopdf &mdash; Free PDF &amp; Image Tools for everyone. All rights reserved.</p>
