Add FAQ section to blog-how-to-use-jpg-to-pdf.html

--- a/blog-how-to-use-jpg-to-pdf.html
+++ b/blog-how-to-use-jpg-to-pdf.html
@@ -897,4 +897,31 @@
         </div>
     </section>
 
+    <section class="faq-section" style="margin-top: 50px; padding: 40px; background: white; border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+        <h2 style="font-size: 2rem; color: #4361ee; margin-bottom: 30px; text-align: center;">Frequently Asked Questions</h2>
+        <div class="faq-container" style="max-width: 800px; margin: 0 auto;">
+
+            <div class="faq-item" style="margin-bottom: 20px; padding: 20px; background: #f8f9ff; border-radius: 12px; border-left: 4px solid #4361ee;">
+                <h3 style="font-size: 1.2rem; color: #0b1630; margin-bottom: 10px; cursor: pointer;" onclick="this.nextElementSibling.style.display = this.nextElementSibling.style.display === 'none' ? 'block' : 'none'">
+                    <i class="fas fa-question-circle" style="color: #4361ee; margin-right: 8px;"></i>
+                    Is this tool really free?
+                </h3>
+                <p style="font-size: 1rem; color: #56607a; line-height: 1.6; margin-top: 10px; display: block;">
+                    Yes, 100% free! There are no hidden charges and no registration required.
+                </p>
+            </div>
+
+            <div class="faq-item" style="margin-bottom: 20px; padding: 20px; background: #f8f9ff; border-radius: 12px; border-left: 4px solid #4361ee;">
+                <h3 style="font-size: 1.2rem; color: #0b1630; margin-bottom: 10px; cursor: pointer;" onclick="this.nextElementSibling.style.display = this.nextElementSibling.style.display === 'none' ? 'block' : 'none'">
+                    <i class="fas fa-question-circle" style="color: #4361ee; margin-right: 8px;"></i>
+                    How many images can I convert at once?
+                </h3>
+                <p style="font-size: 1rem; color: #56607a; line-height: 1.6; margin-top: 10px; display: block;">
+                    Currently, our tool supports converting one image at a time. But you can use it as many times as you need.
+                </p>
+            </div>
+
+        </div>
+    </section>
+
     
