Fix index.html: change excel-unlocker/ links to excel-unlocker.html (fix 404), ensure mobile menu overlay hidden by default, maintain desktop/mobile hover functionality

--- a/index.html
+++ b/index.html
@@ -1507,7 +1507,7 @@
                             <a href="biodata-maker.html">Marrige Biodata-Data Maker</a>
                             <a href="ai-image-generator.html">AI Image Generator</a>
                             <a href="marriage-card.html">Marriage Card</a>
-                            <a href="excel-unlocker/" target="_blank">Excel Unlocker</a>
+                            <a href="excel-unlocker.html">Excel Unlocker</a>
                             <a href="protect-excel.html">Protect Excel Sheet</a>
                         </div>
                     </div>
@@ -1543,7 +1543,7 @@
         </div>
     </header>
     <!-- Mobile Menu Overlay -->
-    <div class="mobile-menu-overlay" id="mobile-menu-overlay">
+    <div class="mobile-menu-overlay" id="mobile-menu-overlay" style="display: none;">
         <div class="mobile-menu-content">
             <div class="mobile-menu-header">
                 <a href="index.html" class="mobile-logo"><img src="images/logo.png" alt="Logo" style="height:40px;" /></a>
@@ -1613,7 +1613,7 @@
                         <a href="biodata-maker.html">Marrige Biodata-Data Maker</a>
                         <a href="ai-image-generator.html">AI Image Generator</a>
                         <a href="marriage-card.html">Marriage Card</a>
-                        <a href="excel-unlocker/" target="_blank">Excel Unlocker</a>
+                        <a href="excel-unlocker.html">Excel Unlocker</a>
                         <a href="protect-excel.html">Protect Excel Sheet</a>
                     </div>
                 </div>
