--- a/index.html
+++ b/index.html
@@ -4676,6 +4676,7 @@
 
     <script type="module" src="js/config.js"></script>
     <script type="module" src="js/firebase-init.js"></script>
+    <script src="js/mobile-menu-init.js"></script>
     <script type="module" src="js/auth.js"></script>
     <script type="module" src="js/donate.js"></script>
     
