Move Sign In and Signup buttons to navigation bar next to Home button with same font and style

--- a/index.html
+++ b/index.html
@@ -1470,6 +1470,9 @@
                     <span></span>
                 </button>
                 <div class="nav-links">
+                    <a href="index.html" class="nav-link">Home</a>
+                    <a href="login.html" class="nav-link">Sign In</a>
+                    <a href="signup.html" class="nav-link">Signup</a>
                     <div class="dropdown">
                         <a href="#">Convert to PDF <i class="fas fa-chevron-down"></i></a>
                         <div class="dropdown-content">
@@ -1534,10 +1537,6 @@
                             
                         </div>
                     </div>
-                </div>
-                <div class="auth-buttons">
-                    <a href="login.html" class="auth-link">Sign In</a>
-                    <a href="signup.html" class="auth-btn"><i class="fas fa-user-plus" aria-hidden="true"></i><span>Signup</span></a>
                 </div>
                 <div id="user-menu" class="user-menu" data-open="false">
                     <button id="user-menu-toggle" class="user-menu-toggle" type="button" aria-haspopup="true" aria-expanded="false" aria-label="Account menu">
